--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <spark.version>2.4.3</spark.version>
         <hadoop.version>2.9.1</hadoop.version>
         <scala.version>2.11</scala.version>
+        <netty.version>4.1.17.Final</netty.version>
     </properties>
 
     <dependencies>
@@ -74,6 +75,13 @@
             <artifactId>spark-core_${scala.version}</artifactId>
             <version>${spark.version}</version>
         </dependency>
+        <!--netty-->
+        <!--io.netty.buffer.PooledByteBufAllocator.defaultNumHeapArena()I-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.17.Final</version>
+        </dependency>
         <!--csv-->
         <dependency>
             <groupId>net.sourceforge.javacsv</groupId>
@@ -92,6 +100,13 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
+        </dependency>
+        <!--lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
