--- a/jvm/pom.xml
+++ b/jvm/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>jvm</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.12</version>
+        </dependency>
+    </dependencies>
 
 </project>
