pom文件例行更新

--- a/util/pom.xml
+++ b/util/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>spark-streaming-kafka-0-10_${scala.version}</artifactId>
             <version>${spark.version}</version>
         </dependency>-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.17.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
