--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
         <module>thread</module>
         <module>jvm</module>
         <module>designoattern</module>
+        <module>scala</module>
+        <module>temp</module>
+        <module>flink</module>
+        <module>java</module>
     </modules>
 
     <properties>
@@ -136,6 +140,11 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming-kafka-0-10_${scala.version}</artifactId>
             <version>${spark.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>util</artifactId>
+            <groupId>zhengwei</groupId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
