--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -14,12 +14,6 @@
     <artifactId>spark</artifactId>
 
     <dependencies>
-        <!--util-->
-        <dependency>
-            <groupId>zhengwei</groupId>
-            <artifactId>util</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
         <!--spark-core-->
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -43,6 +37,12 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming-kafka-0-10_${scala.version}</artifactId>
             <version>${spark.version}</version>
+        </dependency>
+        <!--spark-yarn-->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-yarn_${scala.version}</artifactId>
+            <version>2.4.4</version>
         </dependency>
     </dependencies>
 
