--- a/flink/pom.xml
+++ b/flink/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>flink</artifactId>
 
     <properties>
-        <flink.version>1.10.0</flink.version>
+        <flink.version>1.11.2</flink.version>
     </properties>
 
     <dependencies>
@@ -40,6 +40,11 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-kafka-0.11_2.12</artifactId>
             <version>${flink.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.bahir</groupId>
+            <artifactId>flink-connector-redis_2.11</artifactId>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 
