--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>leetcode</module>
         <module>collection</module>
         <module>hadoop</module>
+        <module>asm</module>
     </modules>
 
     <properties>
