--- a/asm/pom.xml
+++ b/asm/pom.xml
@@ -17,6 +17,14 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>9.3</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
